# Textoon

./: .gitignore  CMakeLists.txt  README.md  arap.py
dummy_data/dance/: map_x_0.csv  map_x_1.csv  map_x_2.csv  map_x_3.csv  map_x_4.csv  map_x_5.csv  map_x_6.csv  map_x_7.csv  map_x_8.csv  map_y_0.csv  map_y_1.csv  map_y_2.csv  map_y_3.csv  map_y_4.csv  map_y_5.csv  map_y_6.csv  map_y_7.csv  map_y_8.csv
dummy_data/hair/: map_x_1.csv  map_x_2.csv  map_x_3.csv  map_x_4.csv  map_y_1.csv  map_y_2.csv  map_y_3.csv  map_y_4.csv
dummy_data/tree/: map_x_1.csv  map_x_10.csv  map_x_11.csv  map_x_12.csv  map_x_13.csv  map_x_14.csv  map_x_15.csv  map_x_16.csv  map_x_17.csv  map_x_18.csv  map_x_19.csv  map_x_2.csv  map_x_20.csv  map_x_21.csv  map_x_22.csv  map_x_23.csv  map_x_24.csv  map_x_25.csv  map_x_26.csv  map_x_27.csv  map_x_28.csv  map_x_29.csv  map_x_3.csv  map_x_30.csv  map_x_31.csv  map_x_32.csv  map_x_33.csv  map_x_34.csv  map_x_35.csv  map_x_36.csv  map_x_4.csv  map_x_5.csv  map_x_6.csv  map_x_7.csv  map_x_8.csv  map_x_9.csv  map_y_1.csv  map_y_10.csv  map_y_11.csv  map_y_12.csv  (+32 more)
dummy_data/walk1/: map_x_0.csv  map_x_1.csv  map_x_10.csv  map_x_11.csv  map_x_12.csv  map_x_13.csv  map_x_14.csv  map_x_2.csv  map_x_3.csv  map_x_4.csv  map_x_5.csv  map_x_6.csv  map_x_7.csv  map_x_8.csv  map_x_9.csv  map_y_0.csv  map_y_1.csv  map_y_10.csv  map_y_11.csv  map_y_12.csv  map_y_13.csv  map_y_14.csv  map_y_2.csv  map_y_3.csv  map_y_4.csv  map_y_5.csv  map_y_6.csv  map_y_7.csv  map_y_8.csv  map_y_9.csv
lazybrush/lazybrush_components/: CMakeLists.txt  palette.cpp  scribble.cpp  scribble.hpp  window.cpp  window.h  window_ui.cpp
lazybrush/lazybrush_include/: lazybrush.hpp
lazybrush/lazybrush_include/preprocessing/: threshold.hpp
src/: depthmapgenerator.cpp  depthmapgenerator.h  main.cpp  mainwindow.cpp  mainwindow.h  normalmapgenerator.cpp  normalmapgenerator.h  postprocessing.cpp  postprocessing.h  scribblecontext.cpp  scribblecontext.h  textoon.cpp  textoon.h
util/: vector_utils.h
